# enum-reflection

./: AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  README.md
examples/: demo.cc
test/: test.cc
